@@ -54,6 +54,9 @@ public:
         return exec->lexicalGlobalObject()->objectPrototype();
     }
 
+protected:
+    RuntimeObjectImp(ExecState*, PassRefPtr<StructureID>, PassRefPtr<Bindings::Instance>);
+
 private:
     friend class Bindings::Instance;
     RuntimeObjectImp(ExecState*, PassRefPtr<Bindings::Instance>);
